Correction version tablette

--- a/style.css
+++ b/style.css
@@ -870,32 +870,55 @@ footer
    /*Hebergements*/
    #heb_main
     {
-       width: 70%;
+       width: 75%;
        margin: 10px auto;
+       
+
     }
+    #logo_heb
+    {
+        margin-left: 7%;
+        width: 85%;
+    }   
+    .heb
+    {
+        width: 85%;
+      
+    }
+    .bold2_heb
+    {
+        margin-left: 4%
+    }
+
    #sec_pop
    {
-         margin: 10px auto;
-        width: 70%;
+        margin: 10px auto;
+        width: 75%;
    }
+  .spop
+  {
+      width: 85%;
+  }
+
+   
    /*activites*/
    #activ
    {
-       width: 100%;
+       width: 99%;
        margin-left: 0%;
    }
    #activites
    {
-       text-align: center;
+    margin-left: 13%;
    }
    #actmain
    {  
        justify-content: space-around;
-       width: 98%;
+       width: 100%;
    }
    .act1
    {
-       width: 70%;
+       width: 75%;
        height: 350px;
        margin-left: auto;
        margin-right: auto;
@@ -903,7 +926,7 @@ footer
    }
   .act2
   {
-    width: 70%;
+    width: 75%;
     height: 720px;
     margin-left:auto;
     margin-right: auto;
@@ -1396,15 +1419,43 @@ footer
         width: 99%;
         margin-left: 0%;
         margin-right: 0%;
+       
     }
-
+    #logo_heb
+   {
+       
+       margin-left: 1%;
+       
+   }
+   .bold2_heb a
+   {
+       margin-left: 0%;
+       padding-left: 0%;
+   }
+   .bold2_heb
+   {
+     margin-left: 1%;
+     
+   }
+   /*les plus populaires*/
     #sec_pop
-    {
+    {   
+        
         width: 99%;
         margin-left: 0%;
         margin-right: 0%;
-
     }
+    #logo_sec2
+    {
+        margin-left: 0%;
+        width: 60%;
+    }
+    #popflex 
+    {   width: 70% ;
+        align-items: flex-start;
+        margin-left: 1%;
+    }
+    /*Activites*/
    #actmain
    {
        display: grid;
@@ -1419,10 +1470,6 @@ footer
    {
        width: 98%;
    }
-   #logo_heb
-   {
-       margin-left: auto;
-       margin-right: auto;
-   }
+   
  
 }
